2003-04-25  Bastien Nocera  <hadess@hadess.net>

	* totem.spec.in: Package the thumbnailer as well (spotted by Chris
	Chabot <chabotc@4-ice.com>

2003-04-25  Bastien Nocera  <hadess@hadess.net>

	* README: updated
	* src/gtk-playlist.c: (drop_cb), (selection_changed),
	(gtk_playlist_add_files), (gtk_playlist_remove_files),
	(gtk_playlist_move_files), (gtk_playlist_up_files),
	(gtk_playlist_down_files), (treeview_row_changed),
	(repeat_button_toggled), (update_repeat_cb), (init_config),
	(gtk_playlist_new): implement list reordering (Closes: #110236),
	small cleanups

2003-04-24  Bastien Nocera  <hadess@hadess.net>

	* README: added mention of the deinterlacing
	* data/totem.glade: made accelerator visible in the menu

2003-04-24  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade:
	* data/totem.schemas.in:
	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_set_deinterlacing),
	(bacon_video_widget_get_deinterlacing):
	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_get_connection_speed),
	(bacon_video_widget_set_deinterlacing),
	(bacon_video_widget_get_deinterlacing):
	* src/bacon-video-widget.h:
	* src/totem-preferences.c: (on_deinterlace1_activate),
	(deinterlace_changed_cb), (auto_resize_changed_cb),
	(totem_setup_preferences):
	* src/totem.c: (totem_action_handle_key): added deinterlace
	functionality (dummy functions in gst port), don't forget to reconnect
	the "toggled" signal on the show visual fx button when the setting is
	changed via gconf, added more checks for some functions

2003-04-24  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (on_video_motion_notify_event),
	(totem_action_handle_scroll), (totem_action_handle_volume_scroll):
	Increase the timeout for the popup windows (5 seconds) and make
	sure that wheel mouse scrolls are taking into account as events, so
	that the window doesn't disappear in the middle of a scroll
	(Closes: #109222)

2003-04-24  Bastien Nocera  <hadess@hadess.net>
