@@ -1,3 +1,8 @@
+2003-04-25  Julien MOUTTE  <julien@moutte.net>
+
+	* src/bacon-video-widget-gst.c: (got_time_tick),
+	(bacon_video_widget_finalize): Fixed seeking support.
+
 2003-04-25  Bastien Nocera  <hadess@hadess.net>
 
 	* totem.spec.in: Package the thumbnailer as well (spotted by Chris
